--- a/Scripts/style.css
+++ b/Scripts/style.css
@@ -23,7 +23,7 @@ html {
   body {
     width: 600px;
     margin: 0 auto;
-    background-color: #848ee6;
+    background-color: #e8e8d3;
     padding: 0 20px 20px 20px;
     border: 5px solid black;
   }
