--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html {
   
   /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
+  background-color: #dbd3db;
   overflow: hidden;
 }
 
@@ -52,6 +52,6 @@ html {
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #4CAF50;
+  background-color: #dbd3db;
   color: white;
 }
