--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ html {
   
   /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #dbd3db;
+  background-color: black;
   overflow: hidden;
 }
 
