--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 10px;
+    font-size: 16px;
     font-family: 'Open Sans', sans-serif;
     background-color: #1b76df;
   }
@@ -12,8 +12,9 @@ html {
   
   p, li {
     font-size: 16px;
-    line-height: 2;
+    line-height: 4;
     letter-spacing: 1px;
+    text-align: center;
   }
   
   
@@ -26,8 +27,12 @@ html {
     width: 600px;
     margin: 0 auto;
     background-color: #1b76df;
-    padding: 0 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
     border: 5px solid black;
+    text-align: center;
+  }
+  .footer {
+    font-size: 10px;
   }
   
   /* Add a black background color to the top navigation */
