--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,21 @@ html {
     background-color: #1b76df;
   }
   
+  body {
+    width: 1200px;
+    margin: 0 auto;
+    background-color: #1b76df;
+    border: 5px solid black;
+    text-align: left;
+    padding-left: 500px;
+    padding-bottom: 25px;
+    margin: 4px 2px;
+  }
   
   h1 {
-    font-size: 60px;
-    text-align: center;
+    font-size: 35px;
+    text-align: left;
+    
   }
   
   p, li {
@@ -21,16 +32,18 @@ html {
   html {
     background-color: #d7dce2;
   }
-  
-  
-  body {
-    width: 600px;
-    margin: 0 auto;
-    background-color: #1b76df;
-    padding: 20px 20px 20px 20px;
-    border: 5px solid black;
-    text-align: center;
+
+  button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    text-align: left;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    padding: 15px 32px;
   }
+  
   .footer {
     font-size: 10px;
   }
